--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Gaurav Khede",
+  "author": "Kaushal Yadav",
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.6",
